manifests/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: back
  labels:
    app: myapp
spec:
  type: ClusterIP
  ports:
    - port: 7000
      name: backend
      targetPort: 8080
    - port: 8000
      name: metrics
      protocol: TCP
      targetPort: 8080
  selector:
    app: myapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: back
  labels:
    app: test
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - image: andrey4281/otussecondtask:0.0.2
          name: crudservice
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
